--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,7 +1,12 @@
 ## Process this file with automake to produce Makefile.in
 
 # Scripts to be distributed
-scripts = ts_distributions.py sensitivity_pull.py
+scripts = README \
+          binned_analysis.py \
+          sensitivity_pull.py \
+          show_pull_histogram.py \
+          ts_distributions.py \
+          unbinned_analysis.py
 
 # Set directories
 scriptsdir   = $(datadir)/examples/python
