--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,19 +7,19 @@ SUBDIRS = ctselect \
           ctobssim
 
 # Scripts to be distributed
-scripts = ctatools-setup \
-          ctatools-init.sh \
-          ctatools-init.csh
+scripts = ctools-setup \
+          ctools-init.sh \
+          ctools-init.csh
 
-# Build libtool library for CTA tools. This is needed to provide
+# Build libtool library for ctools. This is needed to provide
 # a shared library that can be loaded for python bindings. We do
 # not have to build this library if no python bindings are used.
-lib_LTLIBRARIES = libctatools.la
-libctatools_la_SOURCES = 
-libctatools_la_LIBADD = ctbin/libctbin.la \
-                        ctselect/libctselect.la \
-                        ctlike/libctlike.la \
-                        ctobssim/libctobssim.la
+lib_LTLIBRARIES = libctools.la
+libctools_la_SOURCES = 
+libctools_la_LIBADD = ctbin/libctbin.la \
+                      ctselect/libctselect.la \
+                      ctlike/libctlike.la \
+                      ctobssim/libctobssim.la
 
 # Distribute scripts
 EXTRA_DIST   = $(scripts)
