--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -9,7 +9,11 @@ endif
 
 # Set test environment
 TESTS_ENVIRONMENT = LD_LIBRARY_PATH=$(top_builddir)/src/.libs:$(prefix)/lib:$(LD_LIBRARY_PATH) \
-                    PATH=$(top_builddir)/src/ctobssim:$(top_builddir)/src/ctbin:$(top_builddir)/src/ctselect:$(top_builddir)/src/ctlike:$(PATH) \
+                    PATH=$(top_builddir)/src/ctobssim:$(PATH) \
+                    PATH=$(top_builddir)/src/ctbin:$(PATH) \
+                    PATH=$(top_builddir)/src/ctselect:$(PATH) \
+                    PATH=$(top_builddir)/src/ctlike:$(PATH) \
+                    PATH=$(top_builddir)/src/ctskymap:$(PATH) \
                     $(TEST_PYTHON_ENV)
 
 # Tests (these are the tests to be executed)
