--- a/src/ctools-setup.in
+++ b/src/ctools-setup.in
@@ -150,7 +150,7 @@ fi
 # Set MANPATH
 # ==============
 if [ "x$MANPATH" = x ]; then
-  MANPATH="$man_dir"
+  MANPATH="$man_dir:$(manpath)"
 else
   MANPATH=`echo ":$MANPATH:" | \
     sed "s%:$man_dir:%:%g" | sed "s%::*$%%"`
