add crab_poly.xml and crab_profile.xml

--- a/models/Makefile.am
+++ b/models/Makefile.am
@@ -22,6 +22,8 @@ bkgs_DATA = $(bkgs)
 
 # Models to distribute
 models      = crab.xml \
+              crab_poly.xml \
+              crab_profile.xml \
               disk.xml \
               gauss.xml \
               shell.xml
