--- a/src/ctools-setup.in
+++ b/src/ctools-setup.in
@@ -27,12 +27,15 @@ fi
 # Set parameters
 # ==============
 prefix="@prefix@"
-ctools_bin="@prefix@/bin"
-ctools_lib="@prefix@/lib"
+exec_prefix="@exec_prefix@"
+ctools_bin="@bindir@"
+ctools_lib="@libdir@"
 uname_system=`uname`
 python_dir="@pythondir@"
-pkgconfig_dir="@prefix@/lib/pkgconfig"
-man_dir="@prefix@/share/doc/ctools/man"
+python_exec_dir="@pyexecdir@"
+pkgconfig_dir="@libdir@/pkgconfig"
+man_dir="@datadir@/doc/ctools/man"
+caldb_dir="@datadir@/caldb"
 
 #
 # Make pfiles available (this is needed for an installation where the
@@ -123,6 +126,13 @@ else
     sed "s%:$python_dir:%:%g" | sed "s%::*$%%"`
   PYTHONPATH="$python_dir$PYTHONPATH"
 fi
+if [ "x$PYTHONPATH" = x ]; then
+  PYTHONPATH="$python_exec_dir"
+else
+  PYTHONPATH=`echo ":$PYTHONPATH:" | \
+    sed "s%:$python_exec_dir:%:%g" | sed "s%::*$%%"`
+  PYTHONPATH="$python_dir$PYTHONPATH"
+fi
 
 #
 # Set PKG_CONFIG_PATH
@@ -158,9 +168,18 @@ else
 fi
 
 #
+# Set CALDB (if not yet set)
+# ==========================
+if [ "x$CALDB" = x ]; then
+  CALDB="$caldb_dir"
+fi
+
+#
 # List of variables needed in initialization script
 # =================================================
-varlist="PATH PYTHONPATH PKG_CONFIG_PATH LD_LIBRARY_PATH DYLD_LIBRARY_PATH MANPATH PFILES PFCLOBBER"
+varlist="LD_LIBRARY_PATH DYLD_LIBRARY_PATH PATH"
+varlist="$varlist PYTHONPATH PKG_CONFIG_PATH MANPATH"
+varlist="$varlist PFILES PFCLOBBER CALDB"
 
 #
 # Save values in output initialization shell scripts
