Use sh instead of bash for script execution.
On FreeBSD, bash is not installed by default, and when it is installed using ports, it is in /usr/local/bin. Using /bin/bash as script directive thus fails to execute the script. Using /bin/sh instead works.

--- a/test/test_cscripts.sh.in
+++ b/test/test_cscripts.sh.in
@@ -1,4 +1,4 @@
-#! /bin/bash
+#! /bin/sh
 # ==========================================================================
 # This script tests all cscripts that are shipped with ctools
 #
