--- a/pyext/setup.py.in
+++ b/pyext/setup.py.in
@@ -132,6 +132,10 @@ if is_unit_test:
 else:
 	data_files=[('@prefix@/share/ctools/swig', install_files)]
 
+if '@OPENMP_TRUE@' != '#':
+		extra_compile_args=['-fopenmp']
+		extra_link_args=['-fopenmp']
+		
 # Setup
 setup(name='@PACKAGE_NAME@',
       version='@PACKAGE_VERSION@',
@@ -144,7 +148,9 @@ setup(name='@PACKAGE_NAME@',
                              include_dirs=include_dirs,
                              library_dirs=library_dirs,
                              libraries=libraries,
-                             runtime_library_dirs=runtime_library_dirs)],
+                             runtime_library_dirs=runtime_library_dirs,
+			     extra_compile_args=extra_compile_args,
+			     extra_link_args=extra_link_args)],
 	  data_files=data_files,
 	  license="GNU GPL v3",
 	  long_description="CTA science analysis tools",
