--- a/src/ctobssim/Makefile.am
+++ b/src/ctobssim/Makefile.am
@@ -9,6 +9,7 @@ sources = ctobssim.cpp
 # Libtool library
 noinst_LTLIBRARIES = libctobssim.la
 libctobssim_la_SOURCES = $(sources)
+libctobssim_la_LDFLAGS = @OPENMP_LIB_LDFLAGS@
 
 # Program definition
 ctobssim_SOURCES = main.cpp
