Add ctools and gammalib library paths to LD_LIBRARY_PATH for unit testing.
Using the clang compiler, the ctools and gammalib libraries were not found. Adding the paths helps.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -12,7 +12,9 @@ if WITH_PYTHON
 endif
 
 # Set test environment
-TESTS_ENVIRONMENT = $(TEST_PYTHON_ENV)
+#TESTS_ENVIRONMENT = $(TEST_PYTHON_ENV)
+TESTS_ENVIRONMENT = @RUNSHARED@=$(top_builddir)/src/.libs$(TEST_ENV_DIR):$(LIBDIR_GAMMALIB):$(@RUNSHARED@) \
+                    $(TEST_PYTHON_ENV)
 
 # Tests (these are the tests to be executed)
 TESTS = test_ctools.sh \
