Remove @TEST_ENV_DIR@ from load library path.
I don't recall why I have added this for ctools. The variable is never set, so it can't work anyways.

--- a/src/ctools-setup.in
+++ b/src/ctools-setup.in
@@ -29,7 +29,7 @@ fi
 prefix="@prefix@"
 exec_prefix="@exec_prefix@"
 ctools_bin="@bindir@"
-ctools_lib="@libdir@@TEST_ENV_DIR@"
+ctools_lib="@libdir@"
 uname_system=`uname`
 python_dir="@pythondir@"
 python_exec_dir="@pyexecdir@"
